@@ -737,24 +737,28 @@ int lv_active_change(struct cmd_context *cmd, struct logical_volume *lv,
 		if (!deactivate_lv(cmd, lv))
 			return_0;
 	} else if ((activate == CHANGE_AE) ||
+		   seg_is_raid(first_seg(lv)) ||
 		   lv_is_origin(lv) ||
 		   lv_is_thin_type(lv)) {
 		if (activate == CHANGE_ALN) {
-			/* origin or thin, all others have _AE */
+			/* origin, thin or RAID - all others have _AE */
 			/* other types of activation are implicitly exclusive */
 			/* Note: the order of tests is mandatory */
 			log_error("Cannot deactivate \"%s\" locally.", lv->name);
 			return 0;
 		}
-		log_verbose("Activating logical volume \"%s\" exclusively.", lv->name);
+		log_verbose("Activating logical volume \"%s\" exclusively.",
+			    lv->name);
 		if (!activate_lv_excl(cmd, lv))
 			return_0;
 	} else if (activate == CHANGE_ALN) {
-		log_verbose("Deactivating logical volume \"%s\" locally.", lv->name);
+		log_verbose("Deactivating logical volume \"%s\" locally.",
+			    lv->name);
 		if (!deactivate_lv_local(cmd, lv))
 			return_0;
 	} else if ((activate == CHANGE_ALY) || (activate == CHANGE_AAY)) {
-		log_verbose("Activating logical volume \"%s\" locally.", lv->name);
+		log_verbose("Activating logical volume \"%s\" locally.",
+			    lv->name);
 		if (!activate_lv_local(cmd, lv))
 			return_0;
 	} else { /* CHANGE_AY */
